# solo2-gui

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile
i18n/en/: solo2_gui.ftl
resources/: app.desktop  app.metainfo.xml  com.github.cunningcoder5255.solo2-gui.desktop
src/: app.rs  config.rs  main.rs  message.rs  state.rs  totp_subscription.rs  update.rs  view.rs
src/view/: admin_content.rs  totp_content.rs
